fixed overflow problem

--- a/static/css/homepage_style.css
+++ b/static/css/homepage_style.css
@@ -69,6 +69,9 @@ body {
   color: white;
   background-color: black;
 }
+.tooltip-paragraph{
+  text-align: left;
+}
 .mapboxgl-popup-content{
   width:300px;
 }
